CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(viewfloat)

SET(VIEWIMAGE_SOURCES 
viewfloat.cpp
viewfloat.fx
)
		
SET(VIEWIMAGE_HEADERS 
)

INCLUDE_DIRECTORIES(
	../..
	$ENV{DXSDK_DIR}/Include
	$ENV{DXSDK_DIR}/Samples/C++/DXUT/Core
)

LINK_DIRECTORIES(${LIBSL_BINARY_DIR}) 

ADD_EXECUTABLE(viewfloat ${VIEWIMAGE_SOURCES})
SET_TARGET_PROPERTIES(viewfloat PROPERTIES COMPILE_FLAGS "-D_UNICODE -DUNICODE -DTW_STATIC -DTW_NO_LIB_PRAGMA")

TARGET_LINK_LIBRARIES(viewfloat 
	LibSL
	LibSL_d3d
	optimized $ENV{LIBSL_DIR}/lib/AntTweakBar.lib
	debug $ENV{LIBSL_DIR}/lib/AntTweakBar-d.lib
 	$ENV{DXSDK_DIR}/lib/x86/d3d9.lib 
	$ENV{DXSDK_DIR}/lib/x86/d3dx9.lib
	$ENV{DXSDK_DIR}/lib/x86/dxerr.lib
	comctl32.lib 
	$ENV{DXSDK_DIR}/Samples/C++/DXUT/Core/Release/DXUT.lib)

IF(WIN32)
INSTALL(PROGRAMS "${CMAKE_CURRENT_BINARY_DIR}/\${CMAKE_INSTALL_CONFIG_NAME}/viewfloat.exe" DESTINATION ${CMAKE_SOURCE_DIR}/bin)
ELSE(WIN32)
INSTALL(PROGRAMS "${CMAKE_CURRENT_BINARY_DIR}/viewfloat" DESTINATION ${CMAKE_SOURCE_DIR}/bin)
ENDIF(WIN32)

INSTALL(FILES "${CMAKE_CURRENT_SOURCE_DIR}/viewfloat.fx" DESTINATION ${CMAKE_SOURCE_DIR}/bin)
