CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(viewimage)

SET(VIEWIMAGE_SOURCES 
viewimage.cpp
)
		
SET(VIEWIMAGE_HEADERS 
)

INCLUDE_DIRECTORIES(../..)
LINK_DIRECTORIES(${LIBSL_BINARY_DIR}) 

IF (LIBSL_USE_GLUX)
ADD_DEFINITIONS(-DUSE_GLUX)
IF(NOT WIN32)
ADD_DEFINITIONS(-DGL_ARB_multitexture=1)  # hack due to MESA headers including ARB_multitexture
ENDIF(NOT WIN32)
ENDIF (LIBSL_USE_GLUX)

FIND_PACKAGE(OpenGL)

ADD_EXECUTABLE(viewimage ${VIEWIMAGE_SOURCES})
IF(WIN32)
TARGET_LINK_LIBRARIES(viewimage LibSL LibSL_gl ${OPENGL_LIBRARIES})
ELSE(WIN32)
FIND_PACKAGE(GLUT)
TARGET_LINK_LIBRARIES(viewimage LibSL LibSL_gl ${GLUT_LIBRARIES} ${OPENGL_LIBRARIES})
ENDIF(WIN32)

IF(WIN32)
INSTALL(PROGRAMS "${CMAKE_CURRENT_BINARY_DIR}/\${CMAKE_INSTALL_CONFIG_NAME}/viewimage.exe" DESTINATION ${CMAKE_SOURCE_DIR}/bin)
ELSE(WIN32)
INSTALL(PROGRAMS "${CMAKE_CURRENT_BINARY_DIR}/viewimage" DESTINATION ${CMAKE_SOURCE_DIR}/bin)
ENDIF(WIN32)

