CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(TrackballUI_tutorial)

SET(LibSL_DIR $ENV{LIBSL_DIR})
FIND_PACKAGE(LibSL)

INCLUDE_DIRECTORIES( ${LIBSL_INCLUDE_DIR} )

ADD_EXECUTABLE(TrackballUI_tutorial TrackballUI.cpp)
TARGET_LINK_LIBRARIES(TrackballUI_tutorial ${LIBSL_GL_LIBRARIES} ${LIBSL_LIBRARIES})

IF(WIN32)
INSTALL(PROGRAMS "${CMAKE_CURRENT_BINARY_DIR}/release/TrackballUI_tutorial.exe" DESTINATION ${CMAKE_SOURCE_DIR}/bin)
ELSE(WIN32)
INSTALL(PROGRAMS "${CMAKE_CURRENT_BINARY_DIR}/TrackballUI_tutorial" DESTINATION ${CMAKE_SOURCE_DIR}/bin)
ENDIF(WIN32)

