CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(glux)

OPTION(GLUX_BUILD_SAMPLES "Build gluX sample programs" OFF)

SET(GLUX_SOURCES 
src/gluxLoader.cpp
src/gluxPlugin.cpp
)
		
SET(GLUX_HEADERS 
src/gluxLoader.h
src/gluxPlugin.h
)

FIND_PACKAGE(Perl)
FIND_PACKAGE(OpenGL)
FIND_PACKAGE(GLUT)

IF(MINGW)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fpermissive")
ENDIF(MINGW)

IF( NOT PERL_FOUND )
MESSAGE(SEND_ERROR "Perl not found - skipping source regeneration.")
ENDIF( NOT PERL_FOUND )

IF(NOT EMSCRIPTEN)
IF( NOT OPENGL_FOUND )
MESSAGE(FATAL_ERROR "OpenGL not found")
ENDIF( NOT OPENGL_FOUND )
ENDIF(NOT EMSCRIPTEN)

IF( PERL_FOUND )

  #IF(APPLE)
  #SET(GLEXT_FILE glext_apple.h)
  #ELSE(APPLE)
SET(GLEXT_FILE glext.h)
#ENDIF(APPLE)

ADD_CUSTOM_COMMAND(
  OUTPUT  ${CMAKE_CURRENT_SOURCE_DIR}/src/KHR/khrplatform.h
  COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/script/KHR/khrplatform.h ${CMAKE_CURRENT_SOURCE_DIR}/src/KHR/khrplatform.h
  DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/script/KHR/khrplatform.h
)

ADD_CUSTOM_COMMAND(
   OUTPUT  ${CMAKE_CURRENT_SOURCE_DIR}/src/glux.cpp ${CMAKE_CURRENT_SOURCE_DIR}/src/glux.h
   COMMAND ${PERL_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/script/gen_plugins.pl ${CMAKE_CURRENT_SOURCE_DIR}/src  ${CMAKE_CURRENT_SOURCE_DIR}/script/${GLEXT_FILE} ${CMAKE_CURRENT_SOURCE_DIR}/script/wglext.h ${CMAKE_CURRENT_SOURCE_DIR}/script/glxext.h
   DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/src/KHR/khrplatform.h ${CMAKE_CURRENT_SOURCE_DIR}/script/glext.h ${CMAKE_CURRENT_SOURCE_DIR}/script/wglext.h ${CMAKE_CURRENT_SOURCE_DIR}/script/glxext.h
)

ENDIF( PERL_FOUND )

INCLUDE_DIRECTORIES(src)
LINK_DIRECTORIES(${GLUX_BINARY_DIR}) 

ADD_LIBRARY(glux STATIC ${GLUX_SOURCES} ${GLUX_HEADERS} ${CMAKE_CURRENT_SOURCE_DIR}/src/glux.cpp ${CMAKE_CURRENT_SOURCE_DIR}/src/glux.h)

SET_TARGET_PROPERTIES(glux PROPERTIES DEBUG_POSTFIX "-d")
TARGET_LINK_LIBRARIES(glux ${OPENGL_LIBRARY})

IF(LIBSL_USE_INSTALL_PREFIX)
  SET(LIBSL_INSTALL_LIB_DIR "lib")
ELSE()
  SET(LIBSL_INSTALL_LIB_DIR "${CMAKE_SOURCE_DIR}/lib")
ENDIF()

INSTALL(TARGETS glux
  RUNTIME DESTINATION ${CMAKE_SOURCE_DIR}/bin
  LIBRARY DESTINATION ${LIBSL_INSTALL_LIB_DIR}
  ARCHIVE DESTINATION ${LIBSL_INSTALL_LIB_DIR}
)

IF(NOT WIN32)
INSTALL(FILES "${CMAKE_CURRENT_BINARY_DIR}/libglux.a" DESTINATION ${LIBSL_INSTALL_LIB_DIR})
ENDIF(NOT WIN32)

IF( NOT GLUT_FOUND )

MESSAGE(STATUS "glut not found (only needed for samples, not for glux itself)")

ELSE( NOT GLUT_FOUND )

if (GLUX_BUILD_SAMPLES)
ADD_SUBDIRECTORY(samples)
endif (GLUX_BUILD_SAMPLES)

ENDIF( NOT GLUT_FOUND )
