CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(loki)

IF (NOT EMSCRIPTEN)
IF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
INCLUDE(UseCXX11_clang)
ENDIF()
ENDIF()

SET(LOKI_SOURCES 
src/LevelMutex.cpp
src/OrderedStatic.cpp
src/SafeFormat.cpp
src/Singleton.cpp
src/SmallObj.cpp
src/SmartPtr.cpp
src/StrongPtr.cpp
)
		
SET(LOKI_HEADERS 
)

INCLUDE_DIRECTORIES(include)

ADD_LIBRARY(loki STATIC ${LOKI_SOURCES} ${LOKI_HEADERS})
ADD_DEFINITIONS(-D_WIN32_WINNT=0x400)

SET_TARGET_PROPERTIES(loki PROPERTIES DEBUG_POSTFIX "-d")

INSTALL(TARGETS loki
  RUNTIME DESTINATION ${CMAKE_SOURCE_DIR}/bin
  LIBRARY DESTINATION ${CMAKE_SOURCE_DIR}/lib
  ARCHIVE DESTINATION ${CMAKE_SOURCE_DIR}/lib
)
